--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
-.App {
-  text-align: center;
+form {
+  margin: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
+label {
+  display: block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input {
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #09d3ac;
+input[type="checkbox"] {
+  margin-left: 0;
+  margin-right: 10px;
+}
+
+button {
+  display: block;
+  max-width: 200px;
+  padding: 10px 20px;
+  margin-top: 20px;
 }
